Functionnal CircleBoard.